# projects

Digipen/GamersGuild/: SL-GOV-FM-005_Event Proposal_Club Clash.docx
Digipen/GamersGuild/Resources/: Directors' Meeting 1 [16 July].pptx
Digipen/Y1/UXG1116/FinalsPrac/: Program.cs
Digipen/Y1/UXG1116/Test Project/: .gitignore
Digipen/Y1/UXG1116/Test Project/Assets/Scripts/: TestScript.cs
Digipen/Y1/UXG1116/Test Project/ProjectSettings/: ProjectSettings.asset
Digipen/Y1/UXG1116/Test1/: Program.cs  Vector2.cs
Digipen/Y1/UXG1116/TicTacToe/: Box.cs  Coordinate.cs  Player.cs  Program.cs
Digipen/Y1/UXG1116/Week10/Week10/: Program.cs  Solution.cs
Digipen/Y1/UXG1116/Week10Assn/: Program.cs  Solution.cs
Digipen/Y1/UXG1116/Week11/: Card.cs  CardColor.cs  Program.cs  Solution.cs
Digipen/Y1/UXG1116/Week11Assn/: Program.cs  Solution.cs
Digipen/Y1/UXG1116/Week11Lab/: CardType.cs  Solution.cs
Digipen/Y1/UXG1116/Week12Assn/: Module.cs  Program.cs  Student.cs  Teacher.cs
Digipen/Y1/UXG1116/Week12Lab/: MonoBehaviour.cs  Program.cs  Vector2.cs
Digipen/Y1/UXG1116/Week9/: Program.cs  Solution.cs
Digipen/Y1/UXG1116/Week9Assgn/: Program.cs  Solution.cs
Digipen/Y1/UXG1165/T2W1Lab/T2W1Lab/: Circle.cs  Program.cs  Rectangle.cs  Shape.cs  Triangle.cs  Vector2.cs  expected-output.txt
Digipen/Y1/UXG1500/: Group 9 Punk_Prototype Assignment 3A.docx
Personal/cpp/Learning/Hello/: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
